# openagro_web

./: Cargo.toml  README.md
assets/css/: main.css
data/: ir.company.csv
src/: lib.rs
