[package]
name = "web_extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openagro_extension = { version = "0.1.0", git = "https://github.com/openagro/openagro_extension", branch = "development" }